--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Scans and collects accessibility data for a given set of URLs",
   "main": "wsu-a11y-collector.js",
   "dependencies": {
-    "axe-core": "^2.0.7",
-    "phantomjs": "^2.1.7",
+    "elasticsearch": "^12.1.3",
+    "pa11y": "^4.6.0",
+    "system": "^1.2.0",
     "wpapi": "^1.0.0"
   },
   "repository": {
