--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "elasticsearch": "^12.1.3",
     "pa11y": "^4.6.0",
-    "system": "^1.2.0",
+    "url": "^0.11.0",
     "wpapi": "^1.0.0"
   },
   "repository": {
