--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "wsu-a11y-collector.js",
   "dependencies": {
     "dotenv": "^4.0.0",
-    "elasticsearch": "^12.1.3",
+    "elasticsearch": "^13.0.0-rc2",
     "pa11y": "^4.6.0",
     "url": "^0.11.0",
     "wpapi": "^1.0.0"
