--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "dotenv": "^4.0.0",
     "elasticsearch": "^13.1.0",
-    "pa11y": "^4.11.0",
+    "pa11y": "^5.0.0-beta.2",
     "url": "^0.11.0"
   },
   "repository": {
